<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="default_js">var responseObj = JSON.parse(response);\nreturn responseObj.success === true;</string>
  <string name="function_declaration">function validate(response) {</string>
  <string name="function_end">}</string>

  <string name="validation_interval">Validation Interval</string>
  <string name="validation_interval_every">Every</string>

  <string name="retry_policy">Retry Policy</string>
  <string name="retry_policy_retry">Retry</string>
  <string name="retry_policy_times_in">times in</string>
  <string name="retry_policy_minutes">Minute(s)</string>
  <string name="retry_policy_description">
    If a validation fails, perform additional checks sooner by setting the above to non-zero
    values. After retrying %1$d times over %2$d minutes with no success, you will get a notification.
  </string>

  <string name="headers">Headers</string>
  <string name="add_header">Add Header…</string>
  <string name="header_desc">Add HTTP headers to each request made to validate this site.</string>
  <string name="header_name">Header Name</string>
  <string name="header_value">Header Value</string>

  <string name="please_enter_check_interval">Please input a validation interval.</string>
  <string name="check_interval_must_be_greater_zero">The validation interval must be greater than 0.</string>
  <string name="please_enter_javaScript">Please input a validation script.</string>

</resources>
